@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-10-01T00:40:08Z",
-  "count_outdated" : 501,
-  "uniques_outdated" : 328,
-  "count" : 503,
-  "uniques" : 330,
+  "timestamp" : "2024-10-05T00:35:17Z",
+  "count_outdated" : 503,
+  "uniques_outdated" : 330,
+  "count" : 504,
+  "uniques" : 331,
   "clones" : [
     {
-      "timestamp": "2024-09-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2024-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
